Forenkler oppstart. Healthcheck. Fikser en del sonar mangel.